--- a/exploratory_Clinical features.ipynb
+++ b/exploratory_Clinical features.ipynb
@@ -1424,6 +1424,377 @@
         "    plot_and_test_relationship(df, FAIXA_PADRAO, features)\n",
         "    print('\\n\\n')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>SG_UF_NOT</th>\n",
+              "      <th>CS_SEXO</th>\n",
+              "      <th>NU_IDADE_N</th>\n",
+              "      <th>CS_GESTANT</th>\n",
+              "      <th>CS_RACA</th>\n",
+              "      <th>CS_ESCOL_N</th>\n",
+              "      <th>FEBRE</th>\n",
+              "      <th>TOSSE</th>\n",
+              "      <th>GARGANTA</th>\n",
+              "      <th>DISPNEIA</th>\n",
+              "      <th>...</th>\n",
+              "      <th>EVOLUCAO</th>\n",
+              "      <th>DOR_ABD</th>\n",
+              "      <th>FADIGA</th>\n",
+              "      <th>PERD_OLFT</th>\n",
+              "      <th>PERD_PALA</th>\n",
+              "      <th>VACINA_COV</th>\n",
+              "      <th>GRAVIDEZ</th>\n",
+              "      <th>VARIANTE_COVID</th>\n",
+              "      <th>Regiao</th>\n",
+              "      <th>Regiao_nome</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>SP</td>\n",
+              "      <td>F</td>\n",
+              "      <td>38</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>9</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Southeast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>GO</td>\n",
+              "      <td>F</td>\n",
+              "      <td>38</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Midwest</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>SE</td>\n",
+              "      <td>F</td>\n",
+              "      <td>36</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>...</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>9</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Northeast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>SP</td>\n",
+              "      <td>F</td>\n",
+              "      <td>20</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>9</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Southeast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SP</td>\n",
+              "      <td>F</td>\n",
+              "      <td>32</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>...</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Southeast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12716</th>\n",
+              "      <td>DF</td>\n",
+              "      <td>F</td>\n",
+              "      <td>42</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Midwest</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12717</th>\n",
+              "      <td>MT</td>\n",
+              "      <td>F</td>\n",
+              "      <td>26</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Midwest</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12718</th>\n",
+              "      <td>SE</td>\n",
+              "      <td>M</td>\n",
+              "      <td>66</td>\n",
+              "      <td>6</td>\n",
+              "      <td>9</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>...</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Northeast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12719</th>\n",
+              "      <td>SP</td>\n",
+              "      <td>F</td>\n",
+              "      <td>26</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>Not</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Southeast</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12720</th>\n",
+              "      <td>MT</td>\n",
+              "      <td>F</td>\n",
+              "      <td>33</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>Ignored</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Midwest</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>12721 rows × 42 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      SG_UF_NOT CS_SEXO  NU_IDADE_N  CS_GESTANT  CS_RACA  CS_ESCOL_N FEBRE  \\\n",
+              "0            SP       F          38           3        1           9   Yes   \n",
+              "1            GO       F          38           3        4           3   Yes   \n",
+              "2            SE       F          36           3        4           9   Yes   \n",
+              "3            SP       F          20           3        4           3   Yes   \n",
+              "4            SP       F          32           3        1           4   Yes   \n",
+              "...         ...     ...         ...         ...      ...         ...   ...   \n",
+              "12716        DF       F          42           5        9           9   Not   \n",
+              "12717        MT       F          26           5        4           9   Yes   \n",
+              "12718        SE       M          66           6        9           9   Yes   \n",
+              "12719        SP       F          26           3        4           3   Not   \n",
+              "12720        MT       F          33           5        4           9   Yes   \n",
+              "\n",
+              "      TOSSE GARGANTA DISPNEIA  ... EVOLUCAO  DOR_ABD   FADIGA PERD_OLFT  \\\n",
+              "0       Yes      Not      Yes  ...        1      Not      Not       Yes   \n",
+              "1       Yes      Not      Yes  ...        1      Not      Yes       Not   \n",
+              "2       Yes      Yes  Ignored  ...        9  Ignored  Ignored   Ignored   \n",
+              "3       Yes      Not      Yes  ...        1      Not      Not       Not   \n",
+              "4       Yes      Not      Yes  ...        2      Not      Not       Not   \n",
+              "...     ...      ...      ...  ...      ...      ...      ...       ...   \n",
+              "12716   Not      Not      Not  ...        1      Not      Not       Not   \n",
+              "12717   Yes  Ignored  Ignored  ...        1  Ignored  Ignored   Ignored   \n",
+              "12718   Not      Not      Yes  ...        3      Not      Not       Not   \n",
+              "12719   Yes      Yes      Not  ...        1      Not      Not       Not   \n",
+              "12720   Yes      Yes  Ignored  ...        1  Ignored  Ignored   Ignored   \n",
+              "\n",
+              "       PERD_PALA  VACINA_COV  GRAVIDEZ  VARIANTE_COVID  Regiao  Regiao_nome  \n",
+              "0            Yes           9         3               1       3    Southeast  \n",
+              "1            Not           1         3               1       5      Midwest  \n",
+              "2        Ignored           9         3               1       2    Northeast  \n",
+              "3            Yes           9         3               1       3    Southeast  \n",
+              "4            Not           2         5               1       3    Southeast  \n",
+              "...          ...         ...       ...             ...     ...          ...  \n",
+              "12716        Not           2         5               3       5      Midwest  \n",
+              "12717    Ignored           1         5               3       5      Midwest  \n",
+              "12718        Not           1         5               3       2    Northeast  \n",
+              "12719        Not           1         3               3       3    Southeast  \n",
+              "12720    Ignored           1         5               3       5      Midwest  \n",
+              "\n",
+              "[12721 rows x 42 columns]"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df"
+      ]
     }
   ],
   "metadata": {
