--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 1,
       "metadata": {
         "id": "yYyCBlV9hRCx"
       },
@@ -26,20 +26,9 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "from matplotlib import pyplot\n",
         "import io\n",
         "import requests\n",
-        "from sklearn.feature_selection import chi2\n",
-        "import scipy.stats as stats\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn import metrics\n",
         "import seaborn as sn\n",
-        "import statsmodels.api as sm\n",
-        "import statsmodels.formula.api as smf\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "import warnings\n",
         "from PIL import Image"
       ]
     },
@@ -52,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -69,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -78,7 +67,7 @@
               "(447281, 38)"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -89,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -98,7 +87,7 @@
               "(1733517, 38)"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -109,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -119,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -187,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -234,7 +223,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 77,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -245,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -313,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -360,7 +349,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 79,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -378,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -388,47 +377,47 @@
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 1733517 entries, 0 to 1733516\n",
             "Data columns (total 38 columns):\n",
-            " #   Column      Dtype \n",
-            "---  ------      ----- \n",
-            " 0   SG_UF_NOT   object\n",
-            " 1   CS_SEXO     object\n",
-            " 2   NU_IDADE_N  int64 \n",
-            " 3   CS_GESTANT  int64 \n",
-            " 4   CS_RACA     int64 \n",
-            " 5   CS_ESCOL_N  int64 \n",
-            " 6   FEBRE       int64 \n",
-            " 7   TOSSE       int64 \n",
-            " 8   GARGANTA    int64 \n",
-            " 9   DISPNEIA    int64 \n",
-            " 10  DESC_RESP   int64 \n",
-            " 11  SATURACAO   int64 \n",
-            " 12  DIARREIA    int64 \n",
-            " 13  VOMITO      int64 \n",
-            " 14  PUERPERA    int64 \n",
-            " 15  CARDIOPATI  int64 \n",
-            " 16  HEMATOLOGI  int64 \n",
-            " 17  SIND_DOWN   int64 \n",
-            " 18  HEPATICA    int64 \n",
-            " 19  ASMA        int64 \n",
-            " 20  DIABETES    int64 \n",
-            " 21  NEUROLOGIC  int64 \n",
-            " 22  PNEUMOPATI  int64 \n",
-            " 23  IMUNODEPRE  int64 \n",
-            " 24  RENAL       int64 \n",
-            " 25  OBESIDADE   int64 \n",
-            " 26  OUT_MORBI   int64 \n",
-            " 27  UTI         int64 \n",
-            " 28  RAIOX_RES   int64 \n",
-            " 29  DT_COLETA   object\n",
-            " 30  CLASSI_FIN  int64 \n",
-            " 31  CRITERIO    int64 \n",
-            " 32  EVOLUCAO    int64 \n",
-            " 33  DOR_ABD     int64 \n",
-            " 34  FADIGA      int64 \n",
-            " 35  PERD_OLFT   int64 \n",
-            " 36  PERD_PALA   int64 \n",
-            " 37  VACINA_COV  int64 \n",
-            "dtypes: int64(35), object(3)\n",
+            " #   Column      Dtype  \n",
+            "---  ------      -----  \n",
+            " 0   SG_UF_NOT   object \n",
+            " 1   CS_SEXO     object \n",
+            " 2   NU_IDADE_N  int64  \n",
+            " 3   CS_GESTANT  int64  \n",
+            " 4   CS_RACA     int64  \n",
+            " 5   CS_ESCOL_N  float64\n",
+            " 6   FEBRE       float64\n",
+            " 7   TOSSE       float64\n",
+            " 8   GARGANTA    float64\n",
+            " 9   DISPNEIA    float64\n",
+            " 10  DESC_RESP   float64\n",
+            " 11  SATURACAO   float64\n",
+            " 12  DIARREIA    float64\n",
+            " 13  VOMITO      float64\n",
+            " 14  PUERPERA    float64\n",
+            " 15  CARDIOPATI  float64\n",
+            " 16  HEMATOLOGI  float64\n",
+            " 17  SIND_DOWN   float64\n",
+            " 18  HEPATICA    float64\n",
+            " 19  ASMA        float64\n",
+            " 20  DIABETES    float64\n",
+            " 21  NEUROLOGIC  float64\n",
+            " 22  PNEUMOPATI  float64\n",
+            " 23  IMUNODEPRE  float64\n",
+            " 24  RENAL       float64\n",
+            " 25  OBESIDADE   float64\n",
+            " 26  OUT_MORBI   float64\n",
+            " 27  UTI         float64\n",
+            " 28  RAIOX_RES   float64\n",
+            " 29  DT_COLETA   object \n",
+            " 30  CLASSI_FIN  float64\n",
+            " 31  CRITERIO    float64\n",
+            " 32  EVOLUCAO    float64\n",
+            " 33  DOR_ABD     float64\n",
+            " 34  FADIGA      float64\n",
+            " 35  PERD_OLFT   float64\n",
+            " 36  PERD_PALA   float64\n",
+            " 37  VACINA_COV  float64\n",
+            "dtypes: float64(32), int64(3), object(3)\n",
             "memory usage: 502.6+ MB\n"
           ]
         }
@@ -439,20 +428,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_15368\\1518486743.py:16: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_2836\\2717536120.py:16: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
             "  data2021.loc[:, 'DT_COLETA'] = pd.to_datetime(data2021['DT_COLETA'], format='%d/%m/%Y', errors='coerce')\n"
           ]
         }
       ],
       "source": [
-        "#replace NAN values with ignored values\n",
+        "#replace NAN values with ignored values - check if it is the best strategy\n",
         "data2021['CLASSI_FIN'].fillna(4, inplace = True) \n",
         "data2021['CRITERIO'].fillna(0, inplace=True) \n",
         "data2021['CS_GESTANT'].replace([0], 9, inplace=True) \n",
@@ -473,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -482,7 +471,7 @@
               "(19831, 39)"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -496,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -505,7 +494,7 @@
               "(11995, 39)"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -519,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -528,7 +517,7 @@
               "(11053, 39)"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -542,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -831,7 +820,7 @@
               "[8 rows x 36 columns]"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -849,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 16,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -863,7 +852,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_15368\\3328079172.py:15: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_2836\\3328079172.py:15: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
             "  data2022.loc[:, 'DT_COLETA'] = pd.to_datetime(data2022['DT_COLETA'], format='%d/%m/%Y', errors='coerce')\n"
           ]
         }
@@ -889,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -898,7 +887,7 @@
               "(6603, 39)"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -912,7 +901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -921,7 +910,7 @@
               "(4023, 39)"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -935,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -944,7 +933,7 @@
               "(3806, 39)"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -958,7 +947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -1247,7 +1236,7 @@
               "[8 rows x 36 columns]"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1265,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1282,7 +1271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1675,7 +1664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1702,7 +1691,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_15368\\1355518363.py:18: SettingWithCopyWarning: \n",
+            "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_2836\\1355518363.py:18: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -1749,7 +1738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1779,7 +1768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 25,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1824,7 +1813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 26,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1880,7 +1869,7 @@
               "      dtype=object)"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1908,7 +1897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
